# isd_for_linux

./: .gitignore  90-piece-me.rules  CMakeLists.txt  Makefile  Makefile.am  README  README.md  README.original  configure.ac  debug.cpp  debug.h  isd.cpp  mem.cpp  piecedev.cpp  piecedev.h  piecefat.cpp  piecefat.h
